mips package generics