@@ -51,7 +51,7 @@ class SyscallLoader {
     private static final String SYSCALL_ABSTRACT = "AbstractSyscall.class";
     private static final String CLASS_EXTENSION = "class";
 
-    private ArrayList syscallList;
+    private ArrayList<Syscall> syscallList;
 
     /*
      *  Dynamically loads Syscalls into an ArrayList.  This method is adapted from
@@ -60,11 +60,11 @@ class SyscallLoader {
      *  in Java".  Also see the "loadMarsTools()" method from ToolLoader class.
      */
     void loadSyscalls() {
-        syscallList = new ArrayList();
+        syscallList = new ArrayList<>();
         // grab all class files in the same directory as Syscall
-        ArrayList candidates = FilenameFinder.getFilenameList(this.getClass().getClassLoader(),
+        ArrayList<String> candidates = FilenameFinder.getFilenameList(this.getClass().getClassLoader(),
                 SYSCALLS_DIRECTORY_PATH, CLASS_EXTENSION);
-        HashMap syscalls = new HashMap();
+        HashMap<String, String> syscalls = new HashMap<>();
         for (int i = 0; i < candidates.size(); i++) {
             String file = (String) candidates.get(i);
             // Do not add class if already encountered (happens if run in MARS development directory)
@@ -78,11 +78,11 @@ class SyscallLoader {
                 try {
                     // grab the class, make sure it implements Syscall, instantiate, add to list
                     String syscallClassName = CLASS_PREFIX + file.substring(0, file.indexOf(CLASS_EXTENSION) - 1);
-                    Class clas = Class.forName(syscallClassName);
+                    Class<?> clas = Class.forName(syscallClassName);
                     if (!Syscall.class.isAssignableFrom(clas)) {
                         continue;
                     }
-                    Syscall syscall = (Syscall) clas.newInstance();
+                    Syscall syscall = (Syscall) clas.getConstructor().newInstance();
                     if (findSyscall(syscall.getNumber()) == null) {
                         syscallList.add(syscall);
                     } else {
@@ -102,8 +102,8 @@ class SyscallLoader {
 
     // Will get any syscall number override specifications from MARS config file and
     // process them.  This will alter syscallList entry for affected names.
-    private ArrayList processSyscallNumberOverrides(ArrayList syscallList) {
-        ArrayList overrides = new Globals().getSyscallOverrides();
+    private ArrayList<Syscall> processSyscallNumberOverrides(ArrayList<Syscall> syscallList) {
+        ArrayList<SyscallNumberOverride> overrides = new Globals().getSyscallOverrides();
         SyscallNumberOverride override;
         Syscall syscall;
         for (int index = 0; index < overrides.size(); index++) {
